fix various bug, add time to wait, add question clu